// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> should close modal when clicking on backdrop: closed 1`] = `
<div>
  <div
    class="container"
  />
</div>
`;

exports[`<Modal /> should close modal when clicking on backdrop: opened 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="junipero modal opened"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <div
          class="content"
        >
          <a
            class="close"
            href="#"
          >
            <svg
              class="junipero icon remove"
              height="10"
              viewBox="0 0 9 10"
              width="10"
            >
              <path
                d="M8 1.5L1 8.5"
              />
              <path
                d="M1 1.5L8 8.5"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should not close modal closable = false 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="junipero modal opened"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <div
          class="content"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should not close modal closable = false 2`] = `
<div>
  <div
    class="container"
  >
    <div
      class="junipero modal opened"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <div
          class="content"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should not close modal if clicked inside 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="junipero modal opened"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <div
          class="content"
        >
          <a
            class="close"
            href="#"
          >
            <svg
              class="junipero icon remove"
              height="10"
              viewBox="0 0 9 10"
              width="10"
            >
              <path
                d="M8 1.5L1 8.5"
              />
              <path
                d="M1 1.5L8 8.5"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should not close modal if clicked inside 2`] = `
<div>
  <div
    class="container"
  >
    <div
      class="junipero modal opened"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <div
          class="content"
        >
          <a
            class="close"
            href="#"
          >
            <svg
              class="junipero icon remove"
              height="10"
              viewBox="0 0 9 10"
              width="10"
            >
              <path
                d="M8 1.5L1 8.5"
              />
              <path
                d="M1 1.5L8 8.5"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should not toggle modal if it is disabled 1`] = `<div />`;

exports[`<Modal /> should remove modal from DOM when using close method: closed 1`] = `<div />`;

exports[`<Modal /> should remove modal from DOM when using close method: opened 1`] = `
<div>
  <div
    class="junipero modal opened"
  >
    <div
      class="wrapper"
      tabindex="0"
    >
      <div
        class="content"
      >
        <a
          class="close"
          href="#"
        >
          <svg
            class="junipero icon remove"
            height="10"
            viewBox="0 0 9 10"
            width="10"
          >
            <path
              d="M8 1.5L1 8.5"
            />
            <path
              d="M1 1.5L8 8.5"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should render 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="junipero modal opened"
    >
      <div
        class="wrapper"
        tabindex="0"
      >
        <div
          class="content"
        >
          <a
            class="close"
            href="#"
          >
            <svg
              class="junipero icon remove"
              height="10"
              viewBox="0 0 9 10"
              width="10"
            >
              <path
                d="M8 1.5L1 8.5"
              />
              <path
                d="M1 1.5L8 8.5"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
